==> Suqi2020/huikongxiang_env/bsp/stm32/stm32f407-atk-explorer/w5500/w5500_conf.c <==
#include <stdio.h>
#include <string.h>
#include "w5500_conf.h"
#include "utility.h"
#include "w5500.h"
#include "dhcp.h"
#include "board.h"

void set_w5500_ip(void)
{	
	mac[5]=packFlash.netIpFlash.macaddr;
		
   /*复制定义的配置信息到配置结构体*/
	memcpy(ConfigMsg.mac, mac, 6);
	memcpy(ConfigMsg.lip,packFlash.netIpFlash.localIp,4);
	memcpy(ConfigMsg.sub,subnet,4);
	memcpy(ConfigMsg.gw,packFlash.netIpFlash.gateway,4);
	memcpy(ConfigMsg.dns,dns_server,4);
	if(ip_from==IP_FROM_DEFINE)	
		printf("%s使用定义的IP信息配置W5500\r\n",sign);
	
	

	/*使用DHCP获取IP参数，需调用DHCP子函数*/		
	if(ip_from==IP_FROM_DHCP)								
	{
		/*复制DHCP获取的配置信息到配置结构体*/
		if(dhcp_ok==1)
		{
			printf("%sIP from DHCP\r\n",sign);	 
			memcpy(ConfigMsg.lip,DHCP_GET.lip, 4);
			memcpy(ConfigMsg.sub,DHCP_GET.sub, 4);
			memcpy(ConfigMsg.gw,DHCP_GET.gw, 4);
			memcpy(ConfigMsg.dns,DHCP_GET.dns,4);
		}
		else
		{
			printf("%sDHCP子程序未运行,或者不成功\r\n",sign);
			printf("%s使用定义的IP信息配置W5500\r\n",sign);
		}
	}
		
	/*以下配置信息，根据需要选用*/	
	ConfigMsg.sw_ver[0]=FW_VER_HIGH;
	ConfigMsg.sw_ver[1]=FW_VER_LOW;	

	/*将IP配置信息写入W5500相应寄存器*/	
	setSUBR(ConfigMsg.sub);
	setGAR(ConfigMsg.gw);
	setSIPR(ConfigMsg.lip);
	
	getSIPR (packFlash.netIpFlash.localIp);			
	printf("%sW5500 IP地址   : %d.%d.%d.%d\r\n", sign,packFlash.netIpFlash.localIp[0],packFlash.netIpFlash.localIp[1],\
												packFlash.netIpFlash.localIp[2],packFlash.netIpFlash.localIp[3]);
	getSUBR(subnet);
	printf("%sW5500 子网掩码 : %d.%d.%d.%d\r\n",sign, subnet[0],subnet[1],subnet[2],subnet[3]);
	getGAR(packFlash.netIpFlash.gateway);
	printf("%sW5500 网关     : %d.%d.%d.%d\r\n",sign, packFlash.netIpFlash.gateway[0],packFlash.netIpFlash.gateway[1],\
													packFlash.netIpFlash.gateway[2],packFlash.netIpFlash.gateway[3]);
	printf("%sW5500 物理地址 : %02X %02X %02X %02X %02X %02X\r\n",sign, mac[0],mac[1],mac[2],mac[3],mac[4],mac[5]);
}

void wiz_cs(uint8_t val)
{
	if (val == LOW) 
	{
	  //GPIO_ResetBits(WIZ_SPIx_SCS_PORT, WIZ_SPIx_SCS); 		
		HAL_GPIO_WritePin(W5500_CS_GPIO_Port, W5500_CS_Pin, GPIO_PIN_RESET);
	}
	else if (val == HIGH)
	{

		HAL_GPIO_WritePin(W5500_CS_GPIO_Port, W5500_CS_Pin, GPIO_PIN_SET);
	}
}

void reset_w5500(void)
{
	HAL_GPIO_WritePin(W5500_RST_GPIO_Port, W5500_RST_Pin, GPIO_PIN_SET);
	rt_thread_mdelay(200);
  HAL_GPIO_WritePin(W5500_RST_GPIO_Port, W5500_RST_Pin, GPIO_PIN_RESET);	
	rt_thread_mdelay(200);
	HAL_GPIO_WritePin(W5500_RST_GPIO_Port, W5500_RST_Pin, GPIO_PIN_SET);
	rt_thread_mdelay(1600);
}
